# kbd-companion

./: .gitignore  Cargo.toml  build.rs
src/: audio.rs  gui.rs  hid_device_channel.rs  main.rs  record.rs  steelseries.rs
src/gui/: keyboard.rs  steelseries.rs
src/steelseries/: api.rs
src/steelseries/api/: engine.rs  sonar.rs
