[package]
name = "kbd-companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.6.3"
binary-reader = "0.4.5"
bincode = "2.0.0-rc.3"
lazy_static = "1.5.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "implement",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]
