[package]
name = "kbd-companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.6.3"
binary-reader = "0.4.5"
bincode = "2.0.0-rc.3"
lazy_static = "1.5.0"
reqwest = "0.12.12"
eframe = { version = "0.30.0", features = [
    "default",
] }

# For image support:
egui_extras = { version = "0.30.0", features = ["default", "image"] }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }

[dependencies.windows]
version = "0.58.0"
features = [
    "implement",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]
