[package]
name = "kbd-companion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.6.3"
binary-reader = "0.4.5"
bincode = "2.0.0-rc.3"
lazy_static = "1.5.0"
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.12.12", features = ["blocking", "json", "stream"] }
eframe = { version = "0.30.0", features = [
    "default",
] }
percent-encoding = "2.3.1"

# For image support:
egui_extras = { version = "0.30.0", features = ["default", "image"] }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
url = "2.5.4"
bytes = "1.3.0"
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
futures-core = "0.3.25"
serde_urlencoded = "0.7.1"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
base64 = "0.21"
rand = "0.8"
regress = "0.4.1"
tokio = { version = "1.43.0", features = ["sync", "rt-multi-thread"] }
[dependencies.windows]
version = "0.58.0"
features = [
    "implement",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]
[build-dependencies]
prettyplease = "0.2.22"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
serde_json = "1.0"
syn = "2.0"